external-crates/move/crates/move-compiler/tests/move_check/parser/struct_field_missing_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_field_missing_type.move:2:18
  │
2 │     struct S { f } // Each field must specify a type
  │                  ^
  │                  │
  │                  Unexpected '}'
  │                  Expected ':'
