external-crates/move/crates/move-compiler/tests/move_check/parser/struct_field_missing_type.move
module 0x42::M {
    struct S { f } // Each field must specify a type
}
